--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5390,5 +5390,15 @@
     <string name="hex">Hex:</string>
     <string name="hex_hint">#ff000000</string>
     <string name="set">Set</string>
+    
+    <!-- **** Privacy Permission descriptions **** -->
+    
+    <string name="permlab_receive_kill_task_command">Receive the kill Task command</string>
+    <string name="permdesc_receive_kill_task_command">Allows an application to receive the kill task command. This prevents that other applications are available to receive it.</string>
+    
+    <string name="permlab_receive_disable_apps">Receive the disable or enable apps command</string>
+    <string name="permdesc_receive_disable_apps">Allows an application to receive the disable or enable apps command. This prevents that other applications are available to receive it.</string>
+
+     <!-- **** Privacy Permission descriptions **** -->
 
 </resources>
